<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="login_view_display_name">Login</string>
    <string name="user_name_hint">Username</string>
    <string name="password_hint">Password</string>
    <string name="reset_btn_txt">reset</string>
    <string name="submit_btn_txt">login</string>
    <string name="copyrights_markup">Copyrights © 2019 Malipo Popote Solutions</string>
    <string name="hello_blank_fragment">Hello World</string>
    <string name="reset_password_link_text"><![CDATA[<a href="#">Reset Password</a>]]></string>
    <string name="btn_register_text">Register</string>
    <string name="app_icon_description">Application Icon</string>
    <string name="btn_reset_pass_text">Reset Password</string>
    <string name="old_password_hint">Old Password</string>
    <string name="confirm_new_password_hint">Confirm Password</string>
    <string name="new_password_hint">New Password</string>
    <string name="user_id_hint">Username</string>
</resources>