<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".BaseChangePasswordFragment">

    <ImageView
        android:id="@+id/app_icon_id"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:contentDescription="@string/app_icon_description"
        android:src="@drawable/ic_auth_icon"
        app:layout_constraintBottom_toTopOf="@+id/userId_text_input_layout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/userId_text_input_layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:textColorHint="@color/login_hints_color"
        app:boxStrokeColor="@color/box_stroke_color"
        app:hintAnimationEnabled="true"
        app:hintEnabled="true"
        app:layout_constraintBottom_toTopOf="@+id/old_password_text_input_layout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/app_icon_id">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/userId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/user_id_hint"
            android:singleLine="true"
            android:textAlignment="viewStart" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/old_password_text_input_layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textColorHint="@color/login_hints_color"
        app:boxStrokeColor="@color/box_stroke_color"
        app:hintAnimationEnabled="true"
        app:hintEnabled="true"
        app:layout_constraintBottom_toTopOf="@+id/new_password_text_input_layout"
        app:layout_constraintEnd_toEndOf="@+id/userId_text_input_layout"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/userId_text_input_layout"
        app:layout_constraintTop_toBottomOf="@+id/userId_text_input_layout"
        app:passwordToggleDrawable="@android:drawable/ic_menu_view"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/old_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/old_password_hint"
            android:inputType="textPassword"
            android:singleLine="true"
            android:textAlignment="viewStart" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/new_password_text_input_layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textColorHint="@color/login_hints_color"
        app:boxStrokeColor="@color/box_stroke_color"
        app:hintAnimationEnabled="true"
        app:hintEnabled="true"
        app:layout_constraintBottom_toTopOf="@+id/confirm_new_password_text_input_layout"
        app:layout_constraintEnd_toEndOf="@+id/old_password_text_input_layout"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/old_password_text_input_layout"
        app:layout_constraintTop_toBottomOf="@+id/old_password_text_input_layout"
        app:passwordToggleDrawable="@android:drawable/ic_menu_view"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/new_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/new_password_hint"
            android:inputType="textPassword"
            android:password="false"
            android:singleLine="true"
            android:textAlignment="viewStart" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/confirm_new_password_text_input_layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textColorHint="@color/login_hints_color"
        app:boxStrokeColor="@color/box_stroke_color"
        app:hintAnimationEnabled="true"
        app:hintEnabled="true"
        app:layout_constraintBottom_toTopOf="@+id/btn_reset_pass"
        app:layout_constraintEnd_toEndOf="@+id/new_password_text_input_layout"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/new_password_text_input_layout"
        app:layout_constraintTop_toBottomOf="@+id/new_password_text_input_layout"
        app:passwordToggleDrawable="@android:drawable/ic_menu_view"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/confirm_new_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/confirm_new_password_hint"
            android:inputType="textPassword"
            android:singleLine="true"
            android:textAlignment="viewStart" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btn_reset_pass"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/btn_reset_pass_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/confirm_new_password_text_input_layout"
        app:layout_constraintStart_toStartOf="@+id/confirm_new_password_text_input_layout"
        app:layout_constraintTop_toBottomOf="@+id/confirm_new_password_text_input_layout" />
</androidx.constraintlayout.widget.ConstraintLayout>