<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="payload"
            type="com.jnr.dread.auth_ui.LoginPayload" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/app_icon_id"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginTop="16dp"
            app:layout_constraintBottom_toTopOf="@+id/et_user_name_text_input_layout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@android:drawable/ic_dialog_map" />


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/et_user_name_text_input_layout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            app:boxStrokeColor="@color/box_stroke_color"
            app:hintAnimationEnabled="true"
            app:hintEnabled="true"
            app:layout_constraintBottom_toTopOf="@+id/et_password_text_input_layout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/app_icon_id">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_user_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/user_name_hint"
                android:singleLine="true"
                android:text="@={payload.userName}"
                android:textAlignment="viewStart" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/et_password_text_input_layout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:boxStrokeColor="@color/box_stroke_color"
            app:hintAnimationEnabled="true"
            app:hintEnabled="true"
            app:layout_constraintBottom_toTopOf="@+id/btn_login"
            app:layout_constraintEnd_toEndOf="@+id/et_user_name_text_input_layout"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="@+id/et_user_name_text_input_layout"
            app:layout_constraintTop_toBottomOf="@+id/et_user_name_text_input_layout"
            app:passwordToggleDrawable="@android:drawable/ic_menu_view"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password_hint"
                android:inputType="textPassword"
                android:singleLine="true"
                android:text="@={payload.secret}"
                android:textAlignment="viewStart" />
        </com.google.android.material.textfield.TextInputLayout>
        <!--

        <EditText
            android:id="@+id/et_user_name"
            android:layout_width="395dp"
            android:layout_height="wrap_content"
            android:drawableStart="@android:drawable/ic_menu_directions"
            android:hint="@string/user_name_hint"
            android:importantForAutofill="no"
            android:inputType="textNoSuggestions"
            android:selectAllOnFocus="false"
            android:singleLine="true"
            android:text="@={payload.userName}"
            android:textAlignment="center"
            android:textColorHint="@color/login_hints_color"
            tools:layout_editor_absoluteX="8dp"
            tools:layout_editor_absoluteY="198dp" />

        <EditText
            android:id="@+id/et_password"
            android:layout_width="395dp"
            android:layout_height="wrap_content"
            android:drawableStart="@android:drawable/ic_lock_lock"
            android:hint="@string/password_hint"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:singleLine="true"
            android:text="@={payload.secret}"
            android:textAlignment="center"
            android:textColorHint="@color/login_hints_color"
            tools:layout_editor_absoluteX="8dp"
            tools:layout_editor_absoluteY="259dp" />
-->

        <Button
            android:id="@+id/btn_login"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="4dp"
            android:text="@string/submit_btn_txt"
            android:textAllCaps="true"
            app:layout_constraintBottom_toTopOf="@+id/reset_password_link"
            app:layout_constraintEnd_toStartOf="@+id/btn_register"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="@+id/et_password_text_input_layout"
            app:layout_constraintTop_toBottomOf="@+id/et_password_text_input_layout" />

        <Button
            android:id="@+id/btn_register"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:text="@string/btn_register_text"
            app:layout_constraintBaseline_toBaselineOf="@+id/btn_login"
            app:layout_constraintEnd_toEndOf="@+id/et_password_text_input_layout"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/btn_login" />

        <TextView
            android:id="@+id/reset_password_link"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reset_password_link_text"
            app:layout_constraintBottom_toTopOf="@+id/copyrightText"
            app:layout_constraintEnd_toEndOf="@+id/btn_register"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="@+id/btn_login"
            app:layout_constraintTop_toBottomOf="@+id/btn_login" />

        <TextView
            android:id="@+id/copyrightText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="16dp"
            android:text="@string/copyrights_markup"
            android:textAlignment="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/reset_password_link" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>